--- a/conf/index.html
+++ b/conf/index.html
@@ -24,15 +24,15 @@ font-family:tahoma,arial,宋体,helvetica,sans-serif;
 <body>
 <div id="main">
 <div align="center">Congratulations, LTMH install package installed successfully!</div>
-<div align="center"><img src="http://www.hhvm.biz/ltmh.png" alt="LTMH"></div>
+<div align="center"><img src="http://www.hhvmc.com/ltmh.png" alt="LTMH"></div>
 <br>LTMH is a Linux Shell can be prepared with as Debian, ubuntu centos VPS) or independent host installation LTMH (Tengine, nginx, mysql, hhvm, phpMyAdmin) Shell scripting runtime environment.。<br></h2>
 
 <p>view the local environment：</span><a href="/p.php" target="_blank" class="links">Probe</a>　<a href="/phpinfo.php" target="_blank" class="links">phpinfo</a>　<a href="/phpmyadmin/" target="_blank" class="links">phpMyAdmin</a></p>
 
-<p>More LTMH a key installation package information, please visit： <a href="http://www.hhvm.biz" target="_blank">http://www.hhvm.biz</a></p>
-<p>LTMH a key installation package Feedback please visit： <a href="http://www.hhvm.biz/forum-36-1.html" target="_blank">http://www.hhvm.biz/forum-36-1.html</a></p>
-<p>VPS tutorials： <a href="http://www.hhvm.biz/forum-42-1.html" target="_blank">http://www.hhvm.biz/forum-42-1.html</a></p>
-<div align="center"><h3><a href="http://www.hhvm.biz" target="_blank">LTMH</a> by <a href="http://www.hhvm.biz" target="_blank">Andy</a> </h3></div>
+<p>More LTMH a key installation package information, please visit： <a href="http://www.hhvmc.com" target="_blank">http://www.hhvmc.com</a></p>
+<p>LTMH a key installation package Feedback please visit： <a href="http://www.hhvmc.com/forum-36-1.html" target="_blank">http://www.hhvmc.com/forum-36-1.html</a></p>
+<p>VPS tutorials： <a href="http://www.hhvmc.com/forum-42-1.html" target="_blank">http://www.hhvmc.com/forum-42-1.html</a></p>
+<div align="center"><h3><a href="http://www.hhvmc.com" target="_blank">LTMH</a> by <a href="http://www.hhvmc.com" target="_blank">Andy</a> </h3></div>
 </div>
 </body>
 </html>
